--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "prettier": "2.2.1",
+    "prop-types": "15.7.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3"
